--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,14 @@
         </activity>
         <activity android:name=".group_plan_add">
         </activity>
-        <activity android:name=".group_main"></activity>
-        <activity android:name=".MainActivity" />
+        <activity android:name=".group_main">
+        </activity>
+        <activity android:name=".MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
