--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,11 +14,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".SignUpActivity"></activity>
-        <activity android:name=".LoginActivity">
-        </activity>
-        <activity android:name=".group_setting"></activity>
-        <activity android:name=".group_plan_add"></activity>
-        <activity android:name=".group_main"></activity>
+        <activity android:name=".LoginActivity"></activity>
+        <activity android:name=".GroupSettingActivity"></activity>
+        <activity android:name=".GroupPlanAddActivity"></activity>
+        <activity android:name=".GroupMainActivity"></activity>
         <activity android:name=".MainActivity">
              <intent-filter>
              <action android:name="android.intent.action.MAIN" />
