회원 레이아웃 수정
로그인 버튼 수정
회원가입 레이아웃 EditText 수정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         </activity>
         <activity android:name=".group_setting"></activity>
         <activity android:name=".group_plan_add"></activity>
-        <activity android:name=".group_main"></activity>
+        <activity android:name=".GroupMainActivity"></activity>
         <activity android:name=".MainActivity">
              <intent-filter>
              <action android:name="android.intent.action.MAIN" />
