--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,8 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+        maven{url 'https://jitpack.io'}
+        maven{url 'https://dl.bintray.com/drummer-aidan/maven/'}
     }
 }
 
