--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
-        android:name=".App"
+        android:name=".util.App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher_icon"
         android:label="@string/app_name"
@@ -20,14 +20,14 @@
         android:usesCleartextTraffic="true">
 
 
-        <activity android:name=".FindIdPwActivity" />
-        <activity android:name=".GroupChatActivity" />
-        <activity android:name=".SignUpActivity" />
-        <activity android:name=".LoginActivity" />
-        <activity android:name=".GroupSettingActivity" />
-        <activity android:name=".GroupPlanAddActivity" />
-        <activity android:name=".GroupMainActivity" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".activity.FindIdPwActivity" />
+        <activity android:name=".activity.GroupChatActivity" />
+        <activity android:name=".activity.SignUpActivity" />
+        <activity android:name=".activity.LoginActivity" />
+        <activity android:name=".activity.GroupSettingActivity" />
+        <activity android:name=".activity.GroupPlanAddActivity" />
+        <activity android:name=".activity.GroupMainActivity" />
+        <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
