--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,3 +57,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
 }
+
+androidExtensions {
+    experimental = true
+}
