--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,7 @@ dependencies {
     //firebase
     implementation 'com.google.firebase:firebase-analytics:17.2.2'
     implementation 'com.google.firebase:firebase-messaging:20.1.7'
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
 }
 
 androidExtensions {
