[20.10.05] 가계부 Activity 개발 중
가계부 날짜 구해오고 세팅하는 것
가계부 리사이클러뷰 구현이 필요함.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".Main2Activity"></activity>
+        <activity android:name=".activity.GroupExpensesAddActivity"></activity>
 
         <receiver
             android:name=".activity.LockReceiver"
@@ -45,6 +45,7 @@
             </intent-filter>
         </service>
 
+        <activity android:name=".activity.GroupExpenseActivity" />
         <activity android:name=".activity.LockScreenActivity" />
         <activity android:name=".activity.GroupCreateActivity" />
         <activity android:name=".activity.FindIdPwActivity" />
