[20.10.07] 가계부 생성 완료
createExpenses 구현 완료

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,7 +45,7 @@
             </intent-filter>
         </service>
 
-        <activity android:name=".activity.GroupExpenseActivity" />
+        <activity android:name=".activity.GroupExpensesActivity" />
         <activity android:name=".activity.LockScreenActivity" />
         <activity android:name=".activity.GroupCreateActivity" />
         <activity android:name=".activity.FindIdPwActivity" />
