--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
 
     <application
         android:name=".util.App"
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher_icon"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_icon_round"
@@ -56,6 +56,7 @@
         <activity android:name=".activity.LoginActivity" />
         <activity android:name=".activity.GroupSettingActivity" />
         <activity android:name=".activity.GroupPlanAddActivity" />
+        <activity android:name=".activity.GroupPlanSelectLocationActivity" />
         <activity android:name=".activity.GroupMainActivity" />
         <activity android:name=".activity.MainActivity">
             <intent-filter>
