--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,7 +68,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging:20.1.7'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
 
-    implementation 'noman.placesapi:placesAPI:1.1.3'
+    implementation 'com.google.android.libraries.places:places:2.4.0'
+    implementation 'com.google.android.gms:play-services-places:17.0.0'
 }
 
 androidExtensions {
